istio-1.22.2/samples/sleep/egress/HTTPS/gateway-destinal-istio.yaml
# GatewayAPI -> DestinationRule -> VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
  namespace: sleep
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - edition.cnn.com
    tls:
      mode: PASSTHROUGH # cho qua
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-cnn
  namespace: sleep
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:  # dinh nghia 1 subsets cho istio-egress , su dung cho virtual service
  - name: cnn
    labels:
      version: cnn
